[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Nave.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Sonido de l√°ser.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 60.4307

[node name="Player" type="Area2D"]
position = Vector2( 942.851, 390.332 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Laser = ExtResource( 3 )

[node name="Nave_sprite" type="Sprite" parent="."]
position = Vector2( 0.348389, -0.803101 )
scale = Vector2( 0.153655, 0.197408 )
texture = ExtResource( 1 )

[node name="Colision_nave" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.523865, 4.6546 )
shape = SubResource( 1 )

[node name="Sonido_laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
